# gustavo-almeida-de-task

./: Dockerfile  README.md  challenge.py  eda.ipynb  least_unique.csv  nyt_bestsellers.parquet  pete_jake_team.csv  publisher_rank.csv  pyproject.toml  requirements.txt  top3.csv
